--- a/CleverDevicesEx/CleverDevicesStack/CleverDevicesStack.csproj
+++ b/CleverDevicesEx/CleverDevicesStack/CleverDevicesStack.csproj
@@ -40,7 +40,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="StackFunctionality.cs" />
+    <Compile Include="CustomStack.cs" />
+    <Compile Include="ICustomStackObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
